--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 .DS_Store
+# Dependecies
 node_modules/
+# Production files
 /dist/
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+# Cache
+.eslintcache
+.stylelintcache
