--- a/package.json
+++ b/package.json
@@ -68,9 +68,11 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "stylelint": "^10.1.0",
+    "stylelint-color-format": "^0.2.0",
     "stylelint-config-prettier": "^5.2.0",
     "stylelint-config-recommended": "^2.2.0",
     "stylelint-config-sass-guidelines": "^6.0.0",
+    "stylelint-no-indistinguishable-colors": "^1.2.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
