--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "lint:es": "eslint --ext .js,.vue ./ --fix --cache --debug",
     "lint:style": "stylelint \"**/*.{vue,htm,html,css,less,sass,scss,styl,stylus,md,js}\" --fix --cache",
     "lint:html": "htmlhint **/*.{htm,html} --ignore */build/**, */dist/**, */node_modules/**",
-    "lint": "npm run lint:es || npm run lint:style || npm run lint:html",
+    "lint": "exitzero npm run lint:es && exitzero npm run lint:style && exitzero npm run lint:html",
     "format": "prettier --write \"**/*.*\"",
-    "lint-format": "npm run lint || npm run format",
+    "lint-format": "npm run lint && npm run format",
     "build": "node build/build.js"
   },
   "dependencies": {
@@ -48,6 +48,7 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.2.2",
+    "exitzero": "^1.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
